fixed spacing again

--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,6 @@ h2 {
     color: white;
     background-color: black;
     flex:1 1 60%;
-    height: auto;
     font-weight:100;
     margin-right: 5%;
     font-size: 17px;
